--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "sqlConnection": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = YUDormDb; Integrated Security = True"
+      // Integrated Security => Kullanıcı adı şifre sorma, windows oturumumu kullan
+  }
 }
