feat: implement JWT authentication and role-based authorization with Identity

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -8,6 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "sqlConnection": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = YUDormDb; Integrated Security = True"
-      // Integrated Security => Kullanıcı adı şifre sorma, windows oturumumu kullan
+    // Integrated Security => Kullanıcı adı şifre sorma, windows oturumumu kullan
+  },
+  "JwtSettings": {
+    "validIssuer": "YUDormAPI",
+    "validAudience": "YUDormAndroid",
+    "key": "AyympMTwzI95Z1W4oBpb8bPZMaCE4Qtz",
+    "expires" :  60
   }
 }
