add mssqlRepositoryContext and postgresRepositoryContext

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -5,15 +5,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*",
+
+  "DatabaseProvider": "MSSQL", //Burayı değiştirerek repositorycontexti değiştirebilicem
+
   "ConnectionStrings": {
-    "sqlConnection": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = YUDormDb; Integrated Security = True"
-    // Integrated Security => Kullanıcı adı şifre sorma, windows oturumumu kullan
+    "SqlServerConnection": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = YUDormDb; Integrated Security = True",
+    "PostgresConnection": ""
+
   },
   "JwtSettings": {
     "validIssuer": "YUDormAPI",
     "validAudience": "YUDormAndroid",
-    "key": "AyympMTwzI95Z1W4oBpb8bPZMaCE4Qtz",
-    "expires" :  60
+    "key": "",
+    "expires": 60
   }
 }
