fix data source

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -8,7 +8,7 @@
 
   "AllowedHosts": "*",
 
-  "DatabaseProvider": "MSSQL", //Burayı değiştirerek repositorycontexti değiştirebilicem
+  "DatabaseProvider": "Postgres", //Burayı değiştirerek repositorycontexti değiştirebilicem
 
   "ConnectionStrings": {
     "SqlServerConnection": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = YUDormDb; Integrated Security = True",
